# AdapterProjectSetupTesting

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/target10-app/: Cargo.toml
apps/target10-app/src/: main.rs
apps/target5-app/: Cargo.toml
apps/target5-app/src/: main.rs
apps/tools/dep-audit/: Cargo.toml
apps/tools/dep-audit/src/: main.rs
apps/tools/scenario-runner/: Cargo.toml
apps/tools/scenario-runner/src/: main.rs
apps/tools/scenario-runner/tests/: cli.rs
apps/windows-target10-sim/: Cargo.toml
apps/windows-target10-sim/src/: main.rs
apps/windows-target5-sim/: Cargo.toml
apps/windows-target5-sim/src/: main.rs
crates/adapters/c-drivers/: Cargo.toml
crates/adapters/c-drivers/src/: lib.rs
crates/adapters/commtype1/: Cargo.toml
crates/adapters/commtype1/src/: lib.rs
crates/adapters/commtype2/: Cargo.toml
crates/adapters/commtype2/src/: lib.rs
crates/adapters/ethernet/: Cargo.toml
crates/adapters/ethernet/src/: lib.rs
crates/adapters/sim-transport/: Cargo.toml
crates/adapters/sim-transport/src/: lib.rs
crates/adapters/target10/: Cargo.toml
crates/adapters/target10/src/: lib.rs
crates/adapters/target5/: Cargo.toml
crates/adapters/target5/src/: lib.rs
crates/adapters/windows-sim/: Cargo.toml
crates/adapters/windows-sim/src/: lib.rs  manual_input.rs  replay.rs  scenario.rs  sim_data_source.rs
crates/adapters/windows-target10/: Cargo.toml
crates/adapters/windows-target10/src/: lib.rs
crates/adapters/windows-target5/: Cargo.toml
crates/adapters/windows-target5/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/algorithms/: mod.rs  target5_to_target10.rs
crates/core/src/domain/: mod.rs
crates/core/src/flows/: mod.rs  target10.rs  target5.rs  target5_to_target10.rs
crates/core/src/services/: mod.rs
crates/core/src/state/: link.rs  mod.rs  processing.rs  target10.rs  target5.rs
crates/ffi/c-api/: Cargo.toml
crates/ffi/c-api/src/: lib.rs
crates/ffi/c-bindings/: Cargo.toml
crates/ffi/c-bindings/src/: lib.rs
crates/ffi/target-bindings/: Cargo.toml
crates/ffi/target-bindings/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs  versioning.rs
crates/messages/src/common/: mod.rs
crates/messages/src/ethernet/: mod.rs
crates/messages/src/target10/: mod.rs
crates/messages/src/target5/: mod.rs
crates/plugins/api/: Cargo.toml
crates/plugins/api/src/: lib.rs
crates/plugins/loader/: Cargo.toml
crates/plugins/loader/src/: lib.rs
crates/plugins/loader/tests/: plugin_contract.rs
crates/ports/: Cargo.toml
crates/ports/src/: clock.rs  data_source.rs  driver.rs  lib.rs  provider.rs  telemetry.rs  transport.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: app_host.rs  app_profile.rs  diagnostics.rs  effects.rs  health.rs  lib.rs  provider_registry.rs  replay_host.rs  startup.rs
docs/: app-composition-guide.md  application-profile-matrix.md  cli-argument-contracts.md  dependency-rules.md  folder-guide.md  how-to-add-adapter.md  how-to-add-algorithm.md  how-to-add-c-driver-wrapper.md  how-to-add-c-ffi-wrapper.md  how-to-add-control-flow.md  how-to-add-dll-so-backed-provider.md  how-to-add-ethernet-message.md  how-to-add-new-app-profile.md  how-to-add-new-port-and-adapter.md  how-to-add-plugin-provider.md  how-to-add-replay-scenario.md  how-to-add-target10-feature.md  how-to-add-target5-feature.md  how-to-debug-startup-provider-failure.md  how-to-decide-where-code-goes.md  how-to-implement-ethernet-between-apps.md  how-to-run-boundary-checks.md  linux-target-build-roadmap.md  plugin-loading-roadmap.md  provider-requirement-model.md  replay-scenario-format.md  runtime-startup-flow.md  state-management-guide.md  testing-scope.md  windows-vs-target-development-guide.md
docs/adr/: 0001-core-flows-layer.md  0002-replace-simulation-state.md  0003-effect-based-orchestration-model.md  README.md
scenarios/basic/: README.md
scenarios/integration/target5_to_target10/: malformed-replay.json  replay-schema.json  sample-replay.json
scenarios/target10/: README.md
scenarios/target5/: README.md
tests/integration/: Cargo.toml  README.md
tests/integration/tests/: core_dependency_boundaries.rs  readme_package_examples.rs  target5_target10_loopback.rs
tests/plugin_contract/: Cargo.toml
tests/plugin_contract/tests/: plugin_contract.rs
