[package]
name = "windows-target10-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
runtime = { path = "../../crates/runtime" }
adapter-windows-sim = { path = "../../crates/adapters/windows-sim" }
adapter-ethernet = { path = "../../crates/adapters/ethernet" }
