[package]
name = "scenario-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
core = { path = "../../../crates/core" }
messages = { path = "../../../crates/messages" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
