[package]
name = "adapter-windows-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ports = { path = "../../ports" }
messages = { path = "../../messages" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
